--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -1,5 +1,17 @@
 {% extends "@EasyAdmin/page/content.html.twig" %}
 
 {% block content %}
-<h1 class='text-center'>Bienvenue dans l'administration</h1>
+
+<div class="container">
+    <div class="row">
+        <h1 class="text-center"> Administration Garage V Parrot</h1>
+
+        <p class="col-12 text-center ">Il y a <strong>{{ testimonies|length }}</strong> témoignages en attente</p>
+    </div>
+
+</div>
+
+
+
+   
 {% endblock %}
