--- a/public/assets/CSS/accueilStyle.css
+++ b/public/assets/CSS/accueilStyle.css
@@ -9,8 +9,8 @@
 }
 
 .gp_service_container {
-  background-image: linear-gradient(rgba(139, 0, 0, 0.7), rgba(139, 0, 0, 0.7)),
-    url("../../image/bg_image/bpa.png");
+  background-image: linear-gradient(rgba(180, 30, 30, 0.6), rgba(180, 30, 30, 0.6)),
+  url("../../image/bg_image/bpa.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -24,30 +24,30 @@
 }
 
 .gp_card_main {
-  display: flex; 
-  flex-direction: column; 
-  width: 33vw;
+  display: flex;
+  flex-direction: column;
+  width: 20vw;
   height: 20vw;
   min-height: 250px;
   margin: auto;
   overflow: hidden;
   background-image: linear-gradient(
-    rgba(211, 211, 211, 0.7), /* Gris clair avec transparence */
-    rgba(211, 211, 211, 0.7)  /* Gris clair avec transparence */
-  ),
-  url("../../image/bg_image/pja.png");
+      rgba(211, 211, 211, 0.85),
+      rgba(211, 211, 211, 0.85)
+    ),
+    url("../../image/bg_image/pja.png");
 
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  color:black;
+  color: black;
 }
 
 .gp_card_img_main {
-  width: 100%; 
-  height: 50%; 
-  object-fit: contain; 
-  object-position: top; 
+  width: 100%;
+  height: 80%;
+  object-fit: contain;
+  object-position: top;
 }
 
 .star img {
@@ -55,17 +55,15 @@
   height: auto;
 }
 
-.gp_star_card{
+.gp_star_card {
   width: 1.5em;
   height: auto;
   margin-right: 0.2em;
 }
 
-
 @media (max-width: 768px) {
   .gp_card_main {
-    width: 80vw;
+    width: 60vw;
     height: auto;
   }
-
 }
