--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -112,7 +112,7 @@
 
 			<div class="text-center mt-3">
 				<p>Partagez votre expérience et aidez nous à nous améliorer.</p>
-				<button class="btn gp_button mt-3" data-bs-toggle="modal" data-bs-target="#testimonyModal">
+				<button class="btn gp_button my-3" data-bs-toggle="modal" data-bs-target="#testimonyModal">
 					Laisser un avis
 				</button>
 			</div>
