--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Le Garage V Parrot, votre destination de confiance pour les réparations automobiles de qualité et l'achat de voitures d'occasion fiables. Découvrez nos services professionnels et notre sélection de véhicules à des prix compétitifs.">
+		<meta name="keywords" content="Garage automobile, réparations, voitures d'occasion, mécanique, entretien, vente de voitures, service de qualité, professionnels de l'automobile">
+		<meta name="author" content="Arnaud Simoncelli">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta name="robots" content="index, follow">
+
+
 		<title>
 			{% block title %}Garage V.Parrot
 			{% endblock %}
