--- a/public/assets/CSS/accueilStyle.css
+++ b/public/assets/CSS/accueilStyle.css
@@ -21,6 +21,29 @@
 
 .gp_card_text {
   white-space: pre-line;
+  cursor: pointer;
+  padding-left: 1em;
+  padding-right: 1em;
+  max-height: 100px; 
+  overflow-y: auto;
+  /* For Firefox */ 
+  scrollbar-width: thin; 
+  scrollbar-color: rgba(0, 0, 0, 0.5) transparent; 
+}
+
+/* For Chrome Edge  */
+.gp_card_text::-webkit-scrollbar {
+  width: 6px; 
+}
+
+.gp_card_text::-webkit-scrollbar-track {
+  background: transparent; 
+}
+
+.gp_card_text::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5); 
+  border-radius: 10px; 
+  border: 2px solid transparent; 
 }
 
 .gp_card_main {
